W01 Assignment: Home Page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <h3>Anambra, Nigeria</h3>
             <div class="hometown-content">
-                <img src="images/my-homestate.jpg" alt="Anambra State" width="200">
+                <img src="images/nigerian-flag.jpg" alt="Anambra State" width="200">
                 <p>I'm from Anambra State, located in southeastern Nigeria. Known as the "Light of the Nation," Anambra is rich in culture, history, and enterprise. It's home to the commercial city of Onitsha and the industrious people of Nnewi, often called the Japan of Africa for its thriving manufacturing industry. The state is famous for its vibrant festivals, delicious local dishes like ofe onugbu (bitterleaf soup), and its deep roots in Igbo traditions. I love Anambra for its strong sense of community, resilience, and the pride people take in their heritage.</p>
             </div>
         </section>
