--- a/week02/bom.html
+++ b/week02/bom.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book of Mormon Top 10 Chapters</title>
-    <link rel="stylesheet" href="styles/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book of Mormon Top 10</title>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <h1>📖 Book of Mormon Top 10</h1>
-    <main>
-        <label for="favchap">Enter a Book of Mormon Chapter:</label>
-        <input type="text" id="favchap" placeholder="Alma 5">
-        <button>Add Chapter</button>
-        <ul id="list"></ul>
-    </main>
-    <script src="scripts/bom.js"></script>
+  <h1>📖 Book of Mormon Top 10</h1>
+  <main>
+    <div class="counter">0/10 chapters</div>
+    <div class="input-group">
+      <input type="text" id="favchap" placeholder="Alma 5">
+      <button id="addBtn">Add Chapter</button>
+    </div>
+    <p class="error-msg"></p>
+    <ul id="list"></ul>
+  </main>
+  <script src="scripts/bom.js"></script>
 </body>
 </html>
+
+<!-- 
+    JavaScript implementation handles:
+    - Adding/deleting chapters
+    - Input validation
+    - Local storage persistence
+    - Chapter counter updates
+    - Error message display
+  -->
